--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
 		"@agney/playground": "^0.8.1",
 		"@astrojs/image": "^0.16.2",
 		"@astrojs/mdx": "^0.18.2",
-		"astro": "^2.1.7"
+		"@astrojs/react": "^2.1.0",
+		"@types/react": "^18.0.29",
+		"@types/react-dom": "^18.0.11",
+		"astro": "^2.1.7",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@astrojs/rss": "^2.3.1",
