--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"@astrojs/image": "^0.16.2",
 		"@astrojs/mdx": "^0.18.2",
 		"@astrojs/react": "^2.1.0",
+		"@types/d3": "^7.4.0",
 		"@types/react": "^18.0.29",
 		"@types/react-dom": "^18.0.11",
 		"astro": "^2.1.7",
+		"d3": "^7.8.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
